--- a/src/components/Header/Nav/Nav.scss
+++ b/src/components/Header/Nav/Nav.scss
@@ -6,8 +6,9 @@
   right: 0;
   z-index: 10;
   width: 100vw;
-  height: calc(VW(609, $tablet) - VW(140, $tablet));
+  // opacity: 0 !important;
   background-color: $c-white;
+  height: calc(VW(609, $tablet) - VW(140, $tablet));
   padding: VW(100, $tablet) 0 VW(40, $tablet);
 
   display: flex;
@@ -16,6 +17,11 @@
 
   transform-origin: top right;
 
+  @include forMobile {
+    height: calc(VW(450, $mobile) - VW(84, $mobile));
+    padding: VW(70, $mobile) 0 VW(24, $mobile);  
+  }
+
   @include forPortraitTablet() {
     display: none;
   }
@@ -23,6 +29,7 @@
   @include forDesktop() {
     display: none;
   }
+
 
   &__top-link {
     color: $c-light-blue;
@@ -39,11 +46,40 @@
     text-transform: none;
     display: block;
     position: relative;
+
+    @include forMobile {
+      font-size: VW(24, $mobile);
+    }
+
     .link-wrapper {
       @include forTablet {
         height: 4.7vw;
       }
+    
+      @include forMobile {
+        height: VW(24, $mobile);
+      }
     }
   }
   
+  &__background {
+    position: fixed;
+    inset: 0;
+    background: url('../../../../public/images/menu-light.png') no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+    // mix-blend-mode: screen;
+    opacity: 0.3;
+    z-index: 8;
+
+    
+    &--blur {
+      position: fixed;
+      inset: 0;
+      z-index: 9;
+      -webkit-backdrop-filter: blur(0.5vw);
+      backdrop-filter: blur(0.5vw);
+      background-color: #8e8e8e2d;
+    }
+  }
 }
