--- a/src/pages/Home/CTA/CTA.scss
+++ b/src/pages/Home/CTA/CTA.scss
@@ -23,6 +23,11 @@
     height: 80lvh;
   }
 
+  @include forMobile {
+    height: VW(806, $mobile);
+    background-position: 55% 0%;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -60,20 +65,45 @@
       width: 0.15vw;
     }  
     
+    @include forMobile {
+      height: 100lvh;
+      width: 0.2vw;
+    }
+
+    &:nth-of-type(1) {
+      @include forMobile {
+        transform: translateY(0%) rotate(-180deg);
+        height: 48vh;
+        top: 0%;
+
+        background: linear-gradient(0deg,
+        rgb(255, 255, 255) 0%,
+        rgb(235, 235, 235) 79%,
+        rgb(49, 49, 49) 100%
+      );
+      }
+    }
+
     &:nth-of-type(2) {
       top: -100%;
       bottom: -100%;
-      height: 220lvh;
+      height: 220lvh
+      ;
+      transform: translateY(-45%) rotate(-135deg);
+      
+      
+      @include forPortraitTablet() {
+        transform: translateY(-46.7%) rotate(-135deg);
+      }
       
       @include forTablet {
         height: 120lvh;
       }  
-      
-      transform: translateY(-45%) rotate(-135deg);
-
-      @include forPortraitTablet() {
-        transform: translateY(-46.7%) rotate(-135deg);
+    
+      @include forMobile {
+        height: 290vw;
       }
+    
     }
   }
 
@@ -84,7 +114,14 @@
     
     @include forTablet {
       row-gap: 19lvh;
-    }  
+      justify-content: center;
+    } 
+    
+    @include forMobile {
+      row-gap: 19lvh;
+      justify-content: center;
+      padding: 22vw 5vw;
+    }
   }
 
   .top {
@@ -93,7 +130,28 @@
     
     @include forTablet {
       grid-column: 1/4;
-    }  
+    } 
+
+    @include forMobile {
+      grid-column: 1/13;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      gap: VW(24, $mobile);
+    }
+    
+    &__qoute {
+      @include forMobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 0 27%;
+      }
+    }
 
     .qoute {
       margin-right: 2vw;
@@ -125,6 +183,11 @@
     justify-content: space-between;
     grid-column: 1/11;
     margin-top: 4vw;
+    
+    @include forMobile {
+      grid-column: 1/9;
+      margin-top: 46vw;
+    }
 
     &__second {
       text-align: center;
