--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -62,6 +62,11 @@
     grid-template-columns: repeat(12, VW(46, $tablet));
     column-gap: VW(16, $tablet);
   }
+  
+  @include forMobile() {
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: VW(10, $mobile);
+  }
 }
 
 @function VW($px, $base: 1920) {
