--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -137,7 +137,7 @@
     }
     
     @include forMobile {
-      font-size: VW(14, $mobile);
+      font-size: 4.5vw;
       padding: 1.8vw 2.8vw;
       border-radius: 1vw;
     }
@@ -162,6 +162,11 @@
     }
 
     .arrow {
+      @include forMobile {
+        width: auto;
+        height: auto;
+      }
+
       &-wrapper {
         line-height: 95%;
         
