--- a/src/pages/Home/CTA/CTA.scss
+++ b/src/pages/Home/CTA/CTA.scss
@@ -20,7 +20,7 @@
   }
   
   @include forTablet {
-    height: 80lvh;
+    height: VW(820, $tablet);
   }
 
   @include forMobile {
@@ -61,7 +61,7 @@
     z-index: -1;
 
     @include forTablet {
-      height: 100lvh;
+      height: 100vw;
       width: 0.15vw;
     }  
     
@@ -73,7 +73,7 @@
     &:nth-of-type(1) {
       @include forMobile {
         transform: translateY(0%) rotate(-180deg);
-        height: 48vh;
+        height: 90vw;
         top: 0%;
 
         background: linear-gradient(0deg,
@@ -113,12 +113,12 @@
     row-gap: 35lvh;
     
     @include forTablet {
-      row-gap: 19lvh;
+      row-gap: 25vw;
       justify-content: center;
     } 
     
     @include forMobile {
-      row-gap: 19lvh;
+      row-gap: 35vw;
       justify-content: center;
       padding: 22vw 5vw;
     }
@@ -149,7 +149,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin: 0 27%;
+        margin: 0 25%;
       }
     }
 
